<resources>
    <string name="app_name">Tip Calc</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_result">Tip Result</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="calculate_tip">CALCULATE TIP</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="plz_enter">Please Enter some value to calculate tip</string>
</resources>